--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -1,6 +1,6 @@
 ﻿@if (!loading)
 {
-    <MudPaper Elevation="50" id="postrace-container">
+    <MudPaper Elevation="25" id="postrace-container">
         <MudGrid Spacing="1">
             <MudItem xs=12>
                 <MudPaper Elevation="15" Height="75px" Class="pa-4">
@@ -114,9 +114,7 @@
                     <MudPaper Class="pa-4 mud-height-full">
                         <MudText Typo="Typo.h5">Upcoming penalties</MudText>
 
-                        <MudText>NOT IMPLEMENTED</MudText>
-
-                        @*<MudTable T="DriverPenalty" Items="@DriverPenalties" Dense="true" Class="extra-dense">
+                        <MudTable T="DriverPenalty" Items="@driverPenalties" Dense="true" Class="extra-dense">
                             <HeaderContent>
                                 <MudTh>Name</MudTh>
                                 <MudTh>Reason</MudTh>
@@ -133,7 +131,7 @@
                                     <MudText Typo="Typo.caption">@context.Punishment</MudText>
                                 </MudTd>
                             </RowTemplate>
-                        </MudTable>*@
+                        </MudTable>
                     </MudPaper>
                 </MudStack>
             </MudItem>
@@ -143,16 +141,13 @@
 
 @code {
     [CascadingParameter] public RaweCeekModel RaweCeek { get; set; }
+    [Parameter] public IEnumerable<GivenPenalty> UpcomingPenalties { get; set; } = Enumerable.Empty<GivenPenalty>();
     [Parameter] public EventCallback<string> OnNavigate { get; set; }
 
-    List<GivenPenalty> Penalties = new();
-
+    List<DriverPenalty> driverPenalties = new();
     Dictionary<int, int> allotments;
-    int lowestScoring;
-
-    List<DriverPenalty> DriverPenalties = new();
-
     bool loading;
+    int lowestScoring;
 
     protected override void OnParametersSet()
     {
@@ -189,19 +184,19 @@
     // NOTE: Not a definitive solution probably as it could be done much better
     private void BuildDriverPenalties()
     {
-        foreach (var penalty in Penalties)
+        foreach (var penalty in UpcomingPenalties)
         {
-            //var driverResult = Results.Find(e => e.SeasonDriverId == penalty.SeasonDriverId);
-            //if (driverResult != null)
-            //{
-            //    DriverPenalties.Add(new DriverPenalty
-            //        {
-            //            Name = driverResult.SeasonDriver.Driver.FullName,
-            //            Reason = penalty.Incident.Name,
-            //            Punishment = penalty.Incident.Punishment,
-            //            //Styles = driverResult.Status.StatusStyles(),
-            //        });
-            //}
+            var driver = RaweCeek.RaweCeekDrivers.Find(e => e.SeasonDriverId == penalty.SeasonDriverId);
+            if (driver != null)
+            {
+                driverPenalties.Add(new DriverPenalty
+                    {
+                        Name = driver.FullName,
+                        Reason = penalty.Incident.Name,
+                        Punishment = penalty.Incident.Punishment,
+                        //Styles = driverResult.Status.StatusStyles(),
+                    });
+            }
         }
     }
 
