--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -1,6 +1,8 @@
-﻿@if (!loading)
+﻿@inject IDialogService _dialog
+
+@if (!loading)
 {
-    <MudPaper Elevation="15" MinHeight="60px" Width="100%">
+    <MudPaper Elevation="25" MinHeight="60px" Width="100%">
         <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-2">
             <div style="width:30%">
                 <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary" >
@@ -31,8 +33,8 @@
 
             <div class="d-flex flex-row-reverse align-center pa-0" style="width:30%">
                 <MudMenu Label="Charts" Icon="@Icons.Material.Outlined.InsertChart" Color="Color.Secondary" Variant="Variant.Text">
-                    @*<MudMenuItem OnClick="ShowGapperChart">Gapper chart</MudMenuItem>
-                    <MudMenuItem OnClick="ShowPositionChart">Position chart</MudMenuItem>*@
+                    <MudMenuItem OnClick="ShowGapperChart">Gapper chart</MudMenuItem>
+                    <MudMenuItem OnClick="ShowPositionChart">Position chart</MudMenuItem>
                 </MudMenu>
             </div>
         </MudStack>
@@ -872,8 +874,8 @@
         await OnFinish.InvokeAsync();
     }
 
-    //private async Task ShowGapperChart() => _ = 
-    //    await _dialogService.ShowAsync<GapChartDialog>("Gapper chart", new DialogParameters { ["Drivers"] = Model.RaceDrivers });
-    //private async Task ShowPositionChart() => _ =
-    //    await _dialogService.ShowAsync<PositionChangeChart>("Position chart", new DialogParameters { ["Drivers"] = Model.RaceDrivers });
+    private async Task ShowGapperChart() => _ = 
+        await _dialog.ShowAsync<GapChartDialog>("Gapper chart", new DialogParameters { ["Drivers"] = raceDrivers });
+    private async Task ShowPositionChart() => _ =
+        await _dialog.ShowAsync<PositionChangeChart>("Position chart", new DialogParameters { ["Drivers"] = raceDrivers });
 }
