--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -36,7 +36,7 @@
                                               Config="@config" />
                                 </MudTabPanel>
                             }
-                            @if (RaweCeek.Race.State != State.Advanced && RaweCeek.Race.State != State.Closed)
+                            @if (raceDisabled)
                             {
                                 <MudTabPanel Text="@($"FP{nextPractice}")" ID="@($"fp_{nextPractice}")">
                                     <Practice PracticeIndex="@nextPractice"
