--- a/SimTECH/SimTECH/Pages/Factors/Climates.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Climates.razor
@@ -1,27 +1,22 @@
 ﻿@page "/climates"
 @inject ClimateService _climateService
 @inject BreadcrumbProvider _bread
-@inject IDialogService _dialogService
+@inject IDialogService _dialog
 
 <MudContainer MaxWidth="MaxWidth.Large" Class="mt-4">
     <MudPaper MinHeight="60px">
         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-4">
             <MudText Typo="Typo.h3">Climates</MudText>
-            <MudButton OnClick="GetRandomClimate">RandomClimate</MudButton>
-            @if (randomClimate != null)
-            {
-                <MudText>@randomClimate</MudText>
-            }
             <MudSpacer />
             <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="AddItem">New</MudButton>
         </MudStack>
         <MudText Typo="Typo.body2" Color="Color.Info" Class="px-4 pb-2">RNG modifier subtracts from the minimum RNG and and adds to maximum RNG</MudText>
     </MudPaper>
-    <MudDataGrid T="Climate" Items="@ClimateData" RowsPerPage="15" Dense="true" Class="overflow-hidden">
+    <MudDataGrid T="Climate" Items="@climateItems" RowsPerPage="15" Dense="true" Class="overflow-hidden">
         <Columns>
             <TemplateColumn T="Climate" Title="Icon" Sortable="false">
                 <CellTemplate>
-                    <MudIcon Icon="@context.Item.Icon" />
+                    <CustomIcon Icon="@context.Item.Icon" Colour="@context.Item.Colour" />
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e!.Terminology" />
@@ -46,10 +41,16 @@
             <MudDataGridPager T="Climate" />
         </PagerContent>
     </MudDataGrid>
+    <MudExpansionPanels>
+        <MudExpansionPanel Text="Random climate">
+            <MudButton OnClick="GetRandomClimate">RandomClimate</MudButton>
+            <MudText>@(randomClimate ?? "None")</MudText>
+        </MudExpansionPanel>
+    </MudExpansionPanels>
 </MudContainer>
 
 @code {
-    List<Climate> ClimateData;
+    List<Climate> climateItems;
     string? randomClimate = null;
 
     protected override async Task OnInitializedAsync()
@@ -60,12 +61,12 @@
             new BreadcrumbItem("Climates", href: "climates", disabled: true),
         });
 
-        ClimateData = await _climateService.GetClimates(StateFilter.All);
+        climateItems = await _climateService.GetClimates(StateFilter.All);
     }
 
     private void GetRandomClimate()
     {
-        var ranClimate = ClimateData.TakeRandomClimate();
+        var ranClimate = climateItems.TakeRandomClimate();
         randomClimate = ranClimate.Terminology;
     }
 
@@ -77,13 +78,13 @@
                 ["Climate"] = climate,
             };
 
-        var dialog = await _dialogService.ShowAsync<ClimateEditor>("Modify climate", parameters);
+        var dialog = await _dialog.ShowAsync<ClimateEditor>("Modify climate", parameters);
         var result = await dialog.Result;
 
         if (!result.Canceled && result.Data != null && result.Data is Climate updatedItem)
         {
             await _climateService.UpdateClimate(updatedItem);
-            ClimateData = await _climateService.GetClimates(StateFilter.All);
+            climateItems = await _climateService.GetClimates(StateFilter.All);
         }
     }
 
