--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -78,11 +78,10 @@
                         <MudTabPanel Text="Teams" OnClick="OnOpenTeams">
                             @if (teamsLoaded)
                             {
-                                <SeasonTeams
-                                    TeamEntrants="@SeasonTeams"
-                                    SeasonEngines="@SeasonEngines"
-                                    Manufacturers="@Manufacturers"
-                                    OnEditorOpen="UpdateTeam" />
+                                <SeasonTeams TeamEntrants="@SeasonTeams"
+                                             SeasonEngines="@SeasonEngines"
+                                             Manufacturers="@Manufacturers"
+                                             OnEditorOpen="UpdateTeam" />
                             }
                         </MudTabPanel>
                         <MudTabPanel Text="Engines" OnClick="OnOpenEngines">
