--- a/SimTECH/SimTECH/Pages/Statistics/DriverRecord.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverRecord.razor
@@ -66,6 +66,7 @@
 
 @code {
     [CascadingParameter] protected MudDialogInstance? StatDialog { get; set; }
+    [Parameter] public IEnumerable<Driver> Drivers { get; set; } = Enumerable.Empty<Driver>();
 
     private Dictionary<Driver, int>? DriverRecords { get; set; }
 
