--- a/SimTECH/SimTECH/Pages/Statistics/Stats.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/Stats.razor
@@ -1,6 +1,10 @@
 ﻿@page "/stats"
+@inject DriverService _driverService
+@inject LeagueService _leagueService
+@inject ResultService _resultService
+@inject SeasonEntrantService _entrantservice
 @inject BreadcrumbProvider _bread
-@inject IDialogService DialogService
+@inject IDialogService _dialog
 
 <PageTitle>Statistics</PageTitle>
 
@@ -13,7 +17,21 @@
                 </MudStack>
             </MudPaper>
         </MudItem>
-        @foreach (var topic in Topics)
+        <MudItem xs="4">
+            <MudPaper>
+                <MudText>Bit temp but league filter</MudText>
+
+                <MudSelect T="long?" @bind-Value="@leagueFilter" Label="League" Class="field-sm">
+                    @foreach (var league in leagues)
+                    {
+                        <MudSelectItem Value="@league.Id">
+                            <MudText>@league.Name</MudText>
+                        </MudSelectItem>
+                    }
+                </MudSelect>
+            </MudPaper>
+        </MudItem>
+        @foreach (var topic in topics)
         {
             <MudItem xs="4">
                 <MudCard Class="mud-height-full">
@@ -26,7 +44,12 @@
                         <MudText Typo="Typo.body2">@topic.Description</MudText>
                     </MudCardContent>
                     <MudCardActions>
-                        <MudButton FullWidth="true" Variant="Variant.Outlined" Color="Color.Secondary" OnClick="@topic.GraphCall">Show</MudButton>
+                        <MudButton FullWidth="true"
+                                   Variant="Variant.Outlined"
+                                   Color="Color.Secondary"
+                                   OnClick="@(async () => await ShowStatistic(topic))">
+                            Show
+                        </MudButton>
                     </MudCardActions>
                 </MudCard>
             </MudItem>
@@ -35,10 +58,16 @@
 </MudContainer>
 
 @code {
-    private List<StatTopic> Topics = new();
+    List<StatTopic> topics = new();
+    List<League> leagues;
 
-    protected override void OnInitialized()
+    bool loading = true;
+    long? leagueFilter;
+
+    protected override async Task OnInitializedAsync()
     {
+        leagues = await _leagueService.GetLeagues();
+
         _bread.Reset();
         _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
         {
@@ -47,33 +76,70 @@
         });
 
         LoadTopics();
+
+        loading = false;
     }
 
     private void LoadTopics()
     {
-        AddTopic("Driver details", "Get detailed statistics about the results of a driver", ShowDriverDetail);
-        AddTopic("Compare drivers", "Compare statistics between multiple drivers", ShowDriverCompare);
-        AddTopic("Records drivers", "Leaderboards of drivers with the most of something", ShowDriverRecords);
+        //topics.Add(
+        //    new StatTopic(
+        //        "Driver details",
+        //        "Get detailed statistics about the results of a driver",
+        //        typeof(DriverDetailStat),
+        //        GetDriverParameters));
+        topics.Add(
+            new StatTopic(
+                "Compare drivers",
+                "Compare statistics between multiple drivers",
+                typeof(DriverCompareStat),
+                GetDriverParameters));
+        topics.Add(
+            new StatTopic(
+                "Records drivers",
+                "Leaderboards of drivers with the most of something",
+                typeof(DriverRecord),
+                GetDriverParameters));
     }
 
-    private void AddTopic(string title, string descript, Func<Task> call)
+    async Task<DialogParameters> GetDriverParameters()
     {
-        Topics.Add(new StatTopic
+        var drivers = await _driverService.GetDrivers();
+        var seasonDrivers = await _entrantservice.GetAllSeasonDrivers();
+
+        List<Result> results;
+        if (leagueFilter.HasValue)
+            results = await _resultService.GetResultsOfLeague(leagueFilter.Value);
+        else
+            results = await _resultService.GetAllResults();
+
+        return new DialogParameters
         {
-            Title = title,
-            Description = descript,
-            GraphCall = call
-        });
+            ["Drivers"] = drivers,
+            ["SeasonDrivers"] = seasonDrivers,
+            ["Results"] = results
+        };
     }
 
-    async Task ShowDriverDetail() => _ = await DialogService.ShowAsync<DriverDetailStat>("Driver detail data");
-    async Task ShowDriverCompare() => _ = await DialogService.ShowAsync<DriverCompareStat>("Compare drivers");
-    async Task ShowDriverRecords() => _ = await DialogService.ShowAsync<DriverRecord>("Records drivers");
+    async Task ShowStatistic(StatTopic topic)
+    {
+        var parameters = await topic.ParameterQuery.Invoke();
+        _ = await _dialog.ShowAsync(topic.StatisticType, topic.Title, parameters);
+    }
 
     internal class StatTopic
     {
+        public StatTopic(string title, string description, Type statType, Func<Task<DialogParameters>> query)
+        {
+            Title = title;
+            Description = description;
+            StatisticType = statType;
+            ParameterQuery = query;
+        }
+
         public string Title { get; set; }
         public string Description { get; set; }
-        public Func<Task> GraphCall { get; set; }
+        public Type StatisticType { get; set; }
+        public Func<Task<DialogParameters>> ParameterQuery { get; set; }
     }
 }
