--- a/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
@@ -1,6 +1,4 @@
-﻿@inject DriverService DriverService
-
-<MudDialog>
+﻿<MudDialog>
     <TitleContent>
         <MudText>Driver comparison</MudText>
         <MudText Typo="Typo.body2" Color="Color.Warning">Does net yet filter based on which league</MudText>
@@ -19,17 +17,16 @@
                             }
                         </MudStack>
                         <MudStack Row="true" Justify="Justify.SpaceBetween">
-                            <MudSelectExtended
-                                ItemCollection="@Drivers"
-                                T="Driver"
-                                SelectedValuesChanged="SelectionChanged"
-                                MultiSelection="true"
-                                MultiSelectionTextFunc="GetSelectedText"
-                                Label="Driver One"
-                                SearchBox="true"
-                                SearchFunc="SearchDrivers"
-                                Variant="Variant.Outlined"
-                                Class="field-lg">
+                            <MudSelectExtended ItemCollection="@driverSelection"
+                                               T="Driver"
+                                               SelectedValuesChanged="SelectionChanged"
+                                               MultiSelection="true"
+                                               MultiSelectionTextFunc="GetSelectedText"
+                                               Label="Driver One"
+                                               SearchBox="true"
+                                               SearchFunc="SearchDrivers"
+                                               Variant="Variant.Outlined"
+                                               Class="field-lg">
                                 <ItemTemplate>
                                     <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-1">
                                         <MudText>@context.Value.FullName</MudText>
@@ -82,8 +79,11 @@
 
 @code {
     [CascadingParameter] protected MudDialogInstance? StatDialog { get; set; }
+    [Parameter] public IEnumerable<Driver> Drivers { get; set; } = Enumerable.Empty<Driver>();
+    [Parameter] public IEnumerable<SeasonDriver> SeasonDrivers { get; set; } = Enumerable.Empty<SeasonDriver>();
+    [Parameter] public IEnumerable<Result> Results { get; set; } = Enumerable.Empty<Result>();
 
-    private List<Driver> Drivers;
+    private List<Driver> driverSelection = new();
     private IEnumerable<Driver> SelectedDrivers { get; set; } = new HashSet<Driver>();
     private Dictionary<Driver, DataSet> ComparableDrivers { get; set; } = new();
 
@@ -96,6 +96,9 @@
 
     protected override void OnInitialized()
     {
+        if (Drivers.Any())
+            driverSelection.AddRange(Drivers);
+
         options.PlotOptions = new ApexCharts.PlotOptions
             {
                 Bar = new ApexCharts.PlotOptionsBar
@@ -103,11 +106,6 @@
                     Horizontal = true
                 }
             };
-    }
-
-    protected override async Task OnInitializedAsync()
-    {
-        Drivers = await DriverService.GetDrivers();
 
         loading = false;
     }
@@ -131,7 +129,7 @@
         return string.Join(", ", selectedDrivers.Select(e => e.FullName));
     }
 
-    private async Task SelectionChanged(IEnumerable<Driver>? selectedDrivers)
+    private void SelectionChanged(IEnumerable<Driver>? selectedDrivers)
     {
         if (selectedDrivers == null || selectedDrivers.Count() == 0)
             return;
@@ -139,26 +137,19 @@
         foreach (var removeable in ComparableDrivers.Keys.Where(e => !selectedDrivers.Contains(e)))
             ComparableDrivers.Remove(removeable);
 
-        var tasks = new List<Task>();
         foreach (var addable in selectedDrivers.Where(e => !ComparableDrivers.ContainsKey(e)))
-            tasks.Add(AddDataSet(addable));
+            AddDataSet(addable);
 
-        var taskRunner = Task.WhenAll(tasks);
-
-        await taskRunner;
-
-        if (taskRunner.IsCompleted)
-        {
-            StateHasChanged();
-            rendered = true;
-        }
+        StateHasChanged();
+        rendered = true;
     }
 
-    async Task AddDataSet(Driver driver)
+    void AddDataSet(Driver driver)
     {
         var dataSet = new DataSet() { Label = driver.FullName };
 
-        var driverResults = await DriverService.GetAllResults(driver.Id);
+        var seasonDriverIds = SeasonDrivers.Where(e => e.DriverId == driver.Id).Select(e => e.Id).ToList();
+        var driverResults = Results.Where(e => seasonDriverIds.Contains(e.SeasonDriverId)).ToList();
 
         dataSet.DataPoints.Add(new DataPoint("Races", driverResults.Count()));
         dataSet.DataPoints.Add(new DataPoint("Starts", driverResults.Count(e => e.Status != RaceStatus.Dnq)));
@@ -169,7 +160,7 @@
         ComparableDrivers.Add(driver, dataSet);
     }
 
-    private async Task UpdateChart()
+    async Task UpdateChart()
     {
         if (!ComparableDrivers.Any() || chart == null)
             return;
